fix: Shali managed to make blurring bug out and we love her

--- a/static/voiture_noire/member_list.css
+++ b/static/voiture_noire/member_list.css
@@ -54,7 +54,7 @@
         text-align: justify;
     }
 
-    h3, p, ul {
+    h3, p, ul, ol {
         filter: blur(10px);
     }
 
@@ -82,7 +82,7 @@
         font-size: 1.5em;
     }
     
-    h3, p, ul {
+    h3, p, ul, ol {
         filter: blur(0px);
     }
 }
